TILE_HEALTH_COST_MAP to use better map structure